# SCPA_Project

./: .gitignore  CMakeLists.txt  README.md  versions.cmake
include/common/: definitions.h
lib/: CMakeLists.txt
lib/args/: CMakeLists.txt  parse_args.c
lib/include/args/: parse_args.h
lib/include/matrix_market_loaders/: mm_iterators.h  mm_loader.h
lib/include/os_wrap/: fork_exec.h  mkdir.h
lib/include/psql/: psql.h
lib/include/sparse_matrix_cache/: sparse_matrix_cache.h
lib/include/vector_loaders/: vector_loaders.h
lib/matrix_market_io/: CMakeLists.txt
lib/matrix_market_loaders/: CMakeLists.txt  csr_direct_loader.c  csr_transposed_loader.c  hll_direct_loader.c  scpa_mm_iterators.c
lib/os_wrap/: CMakeLists.txt  fork_exec.c  mkdir_recurse.c
lib/psql/: CMakeLists.txt  psql.c
lib/sparse_matrix_cache/: CMakeLists.txt  sparse_matrix_cache.c  wget_score.c
lib/vector_loaders/: CMakeLists.txt  vector_loaders.c
res/: downloadMatrix.sh
src/: .ssh-exec.config.example  CMakeLists.txt  matrices  ompMultiply.c  prepare_plot_data.c  results_to_query.awk  run_foreach_matrix.sh  serialMultiply.c  ssh-exec.sh
src/include/parallel/omp/csr/: scpa_csr_omp_kernel.h
src/include/serial/csr/: scpa_csr_serial_kernel.h
src/parallel/omp/csr/: CMakeLists.txt  scpa_csr_omp_kernel_v0.1.cout  scpa_csr_omp_kernel_v0.c  scpa_csr_omp_kernel_v1.c  scpa_csr_omp_kernel_v1.cout  scpa_csr_omp_kernel_v2.0.1.c  scpa_csr_omp_kernel_v2.1.1.c  scpa_csr_omp_kernel_v2.1.c  scpa_csr_omp_kernel_v2.1.cout  scpa_csr_omp_kernel_v2.c  scpa_csr_omp_kernel_v2.cout
src/serial/csr/: CMakeLists.txt  scpa_csr_serial_kernel.c
tests/: CMakeLists.txt
tests/cache/: CMakeLists.txt  testCacheDir.c  testCacheDownload.c  testURLBuilder.c
tests/multipliers/: CMakeLists.txt  compare_integral_omp_csr.c  compare_omp_csr.c  generate_comparations.c  generate_integral_comparations.c  generate_integral_mm_matrix.c  test_serial_multiplier.c
tests/readers/: CMakeLists.txt  testNormalMMCSRTransposedreader.c  testNormalMMCSRreader.c  testNormalMMHLLreader.c  testNormalMMreader.c  testPatternMMCSRTransposedreader.c  testPatternMMCSRreader.c  testPatternMMHLLreader.c  testSkewMMCSRTransposedreader.c  testSkewMMCSRreader.c  testSkewMMHLLreader.c  testSkewMMreader.c  testSymmetricMMCSRTransposedreader.c  testSymmetricMMCSRreader.c  testSymmetricMMHLLreader.c
tests/readers/resources/: pattern_matrix.mm  skew_matrix.mm  symm_matrix.mm
tests/vector_loaders/: CMakeLists.txt  testLoadFromFile.c
tests/vector_loaders/resources/: testVector.vec
